# julia-sem

./: .gitignore  .gitmodules  README.md
cpp/: basis.hpp  fespace.hpp  gmath.hpp  main.cpp  mesh.hpp  tests.hpp
mc-sem/: CMakeLists.txt
mc-sem/julia/: core.jl  csr.jl  mesh.jl  plot-test.jl  profile-test.jl  read_matlab_test.jl  solve-time-analysis.py  solve.jl
mc-sem/julia/test-data/: 3d_stiff_deg1_nel1.mat  3d_stiff_deg1_nel1_v2.mat  3d_stiff_deg1_nel2.mat  3d_stiff_deg1_nel2_v2.mat  3d_stiff_deg1_nel3_v2.mat  3d_stiff_deg1_nel4.mat  3d_stiff_deg1_nel4_v2.mat  3d_stiff_deg2_nel1.mat  3d_stiff_deg2_nel1_v2.mat  3d_stiff_deg2_nel2.mat  3d_stiff_deg2_nel2_v2.mat  3d_stiff_deg2_nel3_v2.mat  3d_stiff_deg2_nel4.mat  3d_stiff_deg2_nel4_v2.mat  3d_stiff_deg3_nel1.mat  3d_stiff_deg3_nel1_v2.mat  3d_stiff_deg3_nel2.mat  3d_stiff_deg3_nel2_v2.mat  3d_stiff_deg3_nel3_v2.mat  3d_stiff_deg3_nel4.mat  3d_stiff_deg3_nel4_v2.mat  3d_stiff_deg4_nel1_v2.mat  3d_stiff_deg4_nel2_v2.mat  3d_stiff_deg4_nel3_v2.mat  3d_stiff_deg4_nel4_v2.mat
mc-sem/src/: core.py  main.cpp  main.py
mc-sem/src/core/: legendre.hpp  legendre.py  lgl.hpp  lgl.py  weights.hpp
mc-sem/src/test/: dlgl02.csv  dlgl03.csv  dlgl04.csv  dlgl05.csv  dlgl06.csv  dlgl07.csv  dlgl08.csv  dlgl09.csv  dlgl10.csv  dlgl11.csv  dlgl12.csv  dlgl13.csv  dlgl14.csv  dlgl15.csv  dlgl16.csv  hlgl02.csv  hlgl03.csv  hlgl04.csv  hlgl05.csv  hlgl06.csv  hlgl07.csv  hlgl08.csv  hlgl09.csv  hlgl10.csv  hlgl11.csv  hlgl12.csv  hlgl13.csv  hlgl14.csv  hlgl15.csv  hlgl16.csv  wlgl03.csv  wlgl04.csv  wlgl05.csv  wlgl06.csv  wlgl07.csv  wlgl08.csv  wlgl09.csv  wlgl10.csv  wlgl11.csv  wlgl12.csv  (+17 more)
src/: core.jl  log_benchmark.jl  matrix_free_utils.jl  mesh.jl  mg.jl  plot_sparsity.jl  read_matlab_test.jl  solve.jl  solvers.jl
